Start zondag 24 januari

--- a/src/client/app/admin/admin.html
+++ b/src/client/app/admin/admin.html
@@ -2,24 +2,15 @@
     <section class="matter">
         <div class="container">
              <div class="row">
-                <div class="col-md-6">
-                    <div class="widget wviolet">
-                        <div ht-widget-header title="Oefeningen"
-                             allow-collapse="true"></div>
-                        <div class="widget-content text-center text-info">
-                            <h3>Metingsoorten</h3>
-                        </div>
-                        <div class="widget-foot">
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
+              
+                <div class="col-md-12">
                     <div class="widget wgreen">
                         <div ht-widget-header title=Metingen"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <h3>Oefeningen</h3>
+                            <pre>{{vm.authData}}</pre>
+                            <pre>{{vm.trainingen}}</pre>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
