--- a/src/client/app/trainen/trainen.html
+++ b/src/client/app/trainen/trainen.html
@@ -45,9 +45,9 @@
                     </div>
                 </div>
             </div>
- <!--Einde tweed blok-->
+ <!--Einde eerste blok-->
 
-              <!--Begin eerste blok-->
+              <!--Begin tweede blok-->
             <div class="row" ng-show=vm.workoutVandaag.length>
                 <div class="col-md-12">
                     <div class="widget wgreen">
