--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,54 +1,22 @@
 <section id="dashboard-view" class="mainbar">
     <section class="matter">
         <div class="container">
+            
+            <!-- Single button -->
+    <div class="btn-group" uib-dropdown is-open="status.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        Kies een overzicht <i class="fa fa-caret-down"></i> <!--<span class="caret"></span>-->
+      </button>
+      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ><a ui-sref="dashboard.records"">Records</a></li>
+        <li role="menuitem" ><a ui-sref="dashboard.trainingen">Trainingen</a></li>
+       <!--  <li role="menuitem"><a ui-sref="dashboard.trainingen">Something else here</a></li>
+       <li class="divider"></li>
+        <li role="menuitem"><a href="#">Separated link</a></li>-->
+      </ul>
+    </div>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="widget wgreen">
-                        <div ht-widget-header title="Overzicht records" allow-collapse="true"></div>
-
-
-                        <div class="widget-content text-center text-info">
-                            <div class="row">
-                                <div ui-grid="vm.gridRecords" class="myGrid"></div>
-                            </div>
-
-
-
-
-                        </div>
-                        <div class="widget-foot">
-                            Records
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="widget wblue">
-                        <div ht-widget-header title="Overzicht trainingen" allow-collapse="true"></div>
-
-
-                        <div class="widget-content text-center text-info">
-                            <div class="row">
-                                <div ui-grid="vm.gridTrainingen" class="myGrid"></div>
-                            </div>
-                        </div>
-                        <div class="widget-foot">
-                            Records
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-
-
-        </div>
+<div ui-view></div>
+           
     </section>
 </section>
