--- a/src/client/index.html
+++ b/src/client/index.html
@@ -59,6 +59,7 @@
     <script src="/bower_components/firebase/firebase.js"></script>
     <script src="/bower_components/angularfire/dist/angularfire.js"></script>
     <script src="/bower_components/angular-ui-grid/ui-grid.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <script src="/bower_components/angular-i18n/angular-locale_nl-nl.js"></script>
     <!-- endbuild -->
@@ -73,6 +74,7 @@
     <script src="/src/client/app/core/core.module.js"></script>
     <script src="/src/client/app/dashboard/dashboard.module.js"></script>
     <script src="/src/client/app/Firebase/firebase.module.js"></script>
+    <script src="/src/client/app/gebruiker/gebruiker.module.js"></script>
     <script src="/src/client/app/home/home.module.js"></script>
     <script src="/src/client/app/layout/layout.module.js"></script>
     <script src="/src/client/app/login/login.module.js"></script>
@@ -92,10 +94,14 @@
     <script src="/src/client/app/core/dataservice.js"></script>
     <script src="/src/client/app/dashboard/dashboard.controller.js"></script>
     <script src="/src/client/app/dashboard/dashboard.route.js"></script>
+    <script src="/src/client/app/dashboard/records/records.route.js"></script>
+    <script src="/src/client/app/dashboard/trainingen/trainingen.route.js"></script>
     <script src="/src/client/app/Firebase/firebase.auth.js"></script>
     <script src="/src/client/app/Firebase/firebase.config.js"></script>
     <script src="/src/client/app/Firebase/firebase.data.js"></script>
     <script src="/src/client/app/Firebase/firebase.ref.js"></script>
+    <script src="/src/client/app/gebruiker/gebruiker.controller.js"></script>
+    <script src="/src/client/app/gebruiker/gebruiker.route.js"></script>
     <script src="/src/client/app/HelloWorld.js"></script>
     <script src="/src/client/app/home/home.controller.js"></script>
     <script src="/src/client/app/home/home.route.js"></script>
