partial implemantation of typescript userclass

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -102,7 +102,6 @@
     <script src="/src/client/app/Firebase/firebase.ref.js"></script>
     <script src="/src/client/app/gebruiker/gebruiker.controller.js"></script>
     <script src="/src/client/app/gebruiker/gebruiker.route.js"></script>
-    <script src="/src/client/app/HelloWorld.js"></script>
     <script src="/src/client/app/home/home.controller.js"></script>
     <script src="/src/client/app/home/home.route.js"></script>
     <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
@@ -125,6 +124,7 @@
     <script src="/src/client/app/stamgegevens/trainingsschemas/trainingsschemas.route.js"></script>
     <script src="/src/client/app/trainen/trainen.controller.js"></script>
     <script src="/src/client/app/trainen/trainen.route.js"></script>
+    <script src="/src/client/app/users.js"></script>
     <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
     <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
     <!-- endinject -->
