--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -29,6 +29,8 @@
                     <div class="widget wgreen">
                         <div ht-widget-header title="{{vm.title}}" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
+                            <h4>{{vm.user.naam}}</h4>
+                            <p>{{vm.user.opmerkingen}}</p>
                             <pre>{{vm.user}}</pre>
                         </div>
                         <div class="widget-foot">
