--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -29,9 +29,11 @@
                     <div class="widget wgreen">
                         <div ht-widget-header title="{{vm.title}}" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
-                            <h4>{{vm.user.naam}}</h4>
+                            <h4 ng-show="!vm.user.$value">{{vm.user.$id}}</h4>
+                            <h4 ng-show="vm.user.$value">{{vm.user.naam}}</h4>
                             <p>{{vm.user.opmerkingen}}</p>
                             <pre>{{vm.user}}</pre>
+                            <pre>{{vm.inlogGegevens}}</pre>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
