--- a/src/client/index.html
+++ b/src/client/index.html
@@ -87,6 +87,7 @@
     <script src="/src/client/app/blocks/exception/exception.js"></script>
     <script src="/src/client/app/blocks/logger/logger.js"></script>
     <script src="/src/client/app/blocks/router/router-helper.provider.js"></script>
+    <script src="/src/client/app/core/app.domain.js"></script>
     <script src="/src/client/app/core/businesslogic.js"></script>
     <script src="/src/client/app/core/config.js"></script>
     <script src="/src/client/app/core/constants.js"></script>
@@ -124,7 +125,6 @@
     <script src="/src/client/app/stamgegevens/trainingsschemas/trainingsschemas.route.js"></script>
     <script src="/src/client/app/trainen/trainen.controller.js"></script>
     <script src="/src/client/app/trainen/trainen.route.js"></script>
-    <script src="/src/client/app/users.js"></script>
     <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
     <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
     <!-- endinject -->
