continue user registration

--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -71,11 +71,12 @@
                                 <br/>
                                 
                             </div>
-                            <!--<h4>{{vm.user.voorNaam}}</h4>
-                            <h4>{{vm.user.naam}}</h4>
+                            <!--<h4>{{vm.user.naam}}</h4>
+                            <p>{{vm.user.voorNaam}}</p>
+                            
                             <p>{{vm.user.achterNaam}}</p>
                             <pre>{{vm.user}}</pre>
-                            <pre>{{vm.gegUser.password.email | json}}</pre>
+                            <pre>{{vm.gegUser.google.cachedUserProfile.family_name| json}}</pre>
                             <pre>{{vm.gegUser | json}}</pre>-->
                         </div>
                         <div class="widget-foot">
