--- a/src/client/app/gebruiker/gebruiker.html
+++ b/src/client/app/gebruiker/gebruiker.html
@@ -71,13 +71,13 @@
                                 <br/>
                                 
                             </div>
-                            <!--<h4>{{vm.user.naam}}</h4>
+                            <h4>{{vm.user.naam}}</h4>
                             <p>{{vm.user.voorNaam}}</p>
                             
                             <p>{{vm.user.achterNaam}}</p>
                             <pre>{{vm.user}}</pre>
                             <pre>{{vm.gegUser.google.cachedUserProfile.family_name| json}}</pre>
-                            <pre>{{vm.gegUser | json}}</pre>-->
+                            <pre>{{vm.gegUser | json}}</pre>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
