first try typescript service

--- a/src/client/app/stamgegevens/stamgegevens.html
+++ b/src/client/app/stamgegevens/stamgegevens.html
@@ -28,7 +28,7 @@
                         <div class="widget-content text-center text-info">
                            
                             <a ui-sref="metingsoorten"><h3>Metingsoorten</h3></a>
-                            
+                            <pre>{{vm.gebruiker}}</pre>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
