1RepMax entries made

--- a/src/client/app/stamgegevens/stamgegevens.html
+++ b/src/client/app/stamgegevens/stamgegevens.html
@@ -9,13 +9,16 @@
                         <div class="widget-content text-center text-info">
                            <a ui-sref="oefeningen"><h3>Oefeningen</h3></a>
                         </div>
+                        <div class="widget-content text-center text-info">
+                           <a ui-sref="onerepmaxen"><h3>OneRepMaxen</h3></a>
+                        </div>
                          <div class="widget-content text-center text-info">
                            <a ui-sref="halterschijven"><h3>Halterschijven</h3></a>
                         </div>
                          <div class="widget-content text-center text-info">
                            <a ui-sref="trainingsmethodes"><h3>Trainingsmethodes</h3></a>
                         </div>
-                       
+                        
                         <div class="widget-foot">
                             <div class="clearfix"></div>
                         </div>
