--- a/src/client/index.html
+++ b/src/client/index.html
@@ -118,6 +118,8 @@
     <script src="/src/client/app/stamgegevens/metingsoorten/metingsoorten.route.js"></script>
     <script src="/src/client/app/stamgegevens/oefeningen/oefeningen.controller.js"></script>
     <script src="/src/client/app/stamgegevens/oefeningen/oefeningen.route.js"></script>
+    <script src="/src/client/app/stamgegevens/onerepmaxen/onerepmaxen.controller.js"></script>
+    <script src="/src/client/app/stamgegevens/onerepmaxen/onerepmaxen.route.js"></script>
     <script src="/src/client/app/stamgegevens/stamgegevens.controller.js"></script>
     <script src="/src/client/app/stamgegevens/stamgegevens.route.js"></script>
     <script src="/src/client/app/stamgegevens/trainingsmethodes/trainingsmethodes.controller.js"></script>
