Generate training till step 1

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
         /* Since Angular has this but needs to load, this gives us the class early. */
         .ng-hide { display: none!important; }
     </style>
-    <title ng-bind="title">powertowel</title>
+    <title ng-bind="title">FirePower</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
@@ -81,6 +81,7 @@
     <script src="/src/client/app/stamgegevens/stamgegevens.module.js"></script>
     <script src="/src/client/app/trainen/trainen.module.js"></script>
     <script src="/src/client/app/widgets/widgets.module.js"></script>
+    <script src="/src/client/app/workouts/workouts.module.js"></script>
     <script src="/src/client/app/admin/admin.controller.js"></script>
     <script src="/src/client/app/admin/admin.route.js"></script>
     <script src="/src/client/app/blocks/exception/exception-handler.provider.js"></script>
@@ -130,6 +131,8 @@
     <script src="/src/client/app/trainen/trainen.route.js"></script>
     <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
     <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
+    <script src="/src/client/app/workouts/workouts.controller.js"></script>
+    <script src="/src/client/app/workouts/workouts.route.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
