--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -8,7 +8,7 @@
         Kies een overzicht <i class="fa fa-caret-down"></i> <!--<span class="caret"></span>-->
       </button>
       <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-        <li role="menuitem" ><a ui-sref="dashboard.records"">Records</a></li>
+        <li role="menuitem" ><a ui-sref="dashboard.records">Records</a></li>
         <li role="menuitem" ><a ui-sref="dashboard.trainingen">Trainingen</a></li>
        <!--  <li role="menuitem"><a ui-sref="dashboard.trainingen">Something else here</a></li>
        <li class="divider"></li>
