--- a/src/client/app/workouts/workoutsgenereren.html
+++ b/src/client/app/workouts/workoutsgenereren.html
@@ -24,8 +24,9 @@
                 </div>
             </div>
             <!--Trainingen genereren blok-->
-             <pre>{{vm.oneRepMaxenPerOefening | json}}</pre>
-           <pre>{{vm.oefeningen |json}}</pre>
+             <pre>{{vm.trainingsMethodes | json}}</pre>
+           <!--<pre>{{vm.oefeningen |json}}</pre>
+           <pre>{{vm.fbRoot |json}}</pre>-->
                 <div class="row" ng-show="vm.toonTrainingenGenereren">
                     <div class="col-md-12">
                         <div class="widget wgreen">
