--- a/src/client/index.html
+++ b/src/client/index.html
@@ -89,6 +89,7 @@
     <script src="/src/client/app/blocks/logger/logger.js"></script>
     <script src="/src/client/app/blocks/router/router-helper.provider.js"></script>
     <script src="/src/client/app/core/app.domain.js"></script>
+    <script src="/src/client/app/core/app.domain.trainingsSchemas.js"></script>
     <script src="/src/client/app/core/businesslogic.js"></script>
     <script src="/src/client/app/core/config.js"></script>
     <script src="/src/client/app/core/constants.js"></script>
