exercise controller to typescript

--- a/src/client/app/dashboard/trainingen/trainingen.html
+++ b/src/client/app/dashboard/trainingen/trainingen.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="widget wblue">
-            <div ht-widget-header title="Overzicht trainingen" subtitle="sub-titel" rightText="rechtertekst" allow-collapse="true"></div>
+            <div ht-widget-header title={{vm.title}} subtitle="sub-titel" rightText="rechtertekst" allow-collapse="true"></div>
             <div class="widget-content text-center text-info">
                 <div class="row">
                     <div ui-grid="vm.gridTrainingen" class="myGrid"></div>
