--- a/src/client/app/stamgegevens/trainingsmethodes/trainingsmethodes.html
+++ b/src/client/app/stamgegevens/trainingsmethodes/trainingsmethodes.html
@@ -7,7 +7,7 @@
                         <div ht-widget-header title={{vm.title}} allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <div class="row">
-                                <pre>{{vm.trainingsMethodes}}</pre>
+                              
                                 <table class="table table-bordered table-responsive table-hover">
                                     <thead>
                                         <tr>
@@ -23,7 +23,7 @@
                                             </td>
                                           
                                             <td>
-                                                 <a ui-sref="trainingsschemas({id: m.$id})">Trainingsschema</a>
+                                                 <a ui-sref="trainingsschemas({id: m.$id})">Klik voor schema</a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -65,6 +65,7 @@
                                 </div>
                             </div>
                         </div>
+                          <pre>{{vm.trainingsMethodes | json}}</pre>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
                         </div>
