--- a/src/client/app/stamgegevens/trainingsschemas/trainingsschemas.html
+++ b/src/client/app/stamgegevens/trainingsschemas/trainingsschemas.html
@@ -4,8 +4,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="widget wgreen">
-                        <div ht-widget-header title={{vm.title}} allow-collapse="true"></div>
+                        <div ht-widget-header title={{vm.title}}  allow-collapse="true">  </div>
                         <div class="widget-content text-center text-info">
+                            <a ui-sref='trainingsmethodes'>Terug naar methode</a>
                             <div class="row">
                                 <table class="table table-bordered table-responsive table-hover">
                                     <thead>
