stripped hottowel layout and changed to start using Angular Material Design

--- a/src/client/app/stamgegevens/stamgegevens.html
+++ b/src/client/app/stamgegevens/stamgegevens.html
@@ -32,6 +32,8 @@
                            
                             <a ui-sref="metingsoorten"><h3>Metingsoorten</h3></a>
                         </div>
+                            <h4>Standard date-picker</h4>
+    <md-datepicker ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
                         </div>
