--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
+
 <head>
-    <style>
-        /* This helps the ng-show/ng-hide animations start at the right place. */
-        /* Since Angular has this but needs to load, this gives us the class early. */
-        .ng-hide { display: none!important; }
+    <style type="text/css">
+        /**
+         * Hide when Angular is not yet loaded and initialized
+         */
+        
+        [ng\:cloak],
+        [ng-cloak],
+        [data-ng-cloak],
+        [x-ng-cloak],
+        .ng-cloak,
+        .x-ng-cloak {
+            display: none !important;
+        }
     </style>
     <title ng-bind="title">FirePower</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+
     <base href="/">
 
 
 
     <!-- build:css styles/lib.css -->
-   
+
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="/bower_components/angular-ui-grid/ui-grid.css" />
+    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
-     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbuild -->
 
     <!-- build:css styles/app.css -->
@@ -29,21 +41,47 @@
     <link rel="stylesheet" href="/.tmp/styles.css">
     <!-- endinject -->
     <!-- endbuild -->
+
+   
 </head>
-<body>
-    <div>
-        <div ng-include="'app/layout/shell.html'"></div>
-        <div id="splash-page" ng-show="showSplash">
-            <div class="page-splash">
-                <div class="page-splash-message">
-                   <span class="fa fa-fire"></span> FirePower <span class="fa fa-bolt">
-                </div>
-                <div class="progress progress-striped active page-progress-bar">
-                    <div class="bar"></div>
-                </div>
-            </div>
-        </div>
+
+<body ng-app="app" layout="row" ng-controller="SidebarController as vm" ng-cloak>
+
+    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" ng-click="vm.toggleMenu()" aria-label="Toon Menu"
+    md-is-locked-open="$mdMedia('gt-sm')">
+
+        <md-toolbar class="md-whiteframe-z2">
+            <h2 class="md-toolbar-tools">Menu</h2>
+
+        </md-toolbar>
+
+        <md-list>
+            <md-list-item ng-repeat="r in vm.navRoutes">
+                <md-button ui-sref="{{r.name}}" ng-bind-html="r.settings.content" aria-label="r.setting.content"></md-button>
+
+            </md-list-item>
+        </md-list>
+
+    </md-sidenav>
+
+
+
+    <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
+
+        <md-toolbar layout="row" class="md-whiteframe-z1">
+            <md-button id="main" class="menu" hide-gt-sm ng-click="vm.toggleMenu()" aria-label="Toon menu">
+               <i class="fa fa-bars"></i>
+            </md-button>
+            <h1 class="md-headline" style="font color='red'"> <span class="fa fa-fire"> FirePower <span class="fa fa-bolt"> </h1> 
+
+        </md-toolbar>
+        <md-content>
+            <md-content flex id="content">
+                <div ui-view></div>
+            </md-content>
+        </md-content>
     </div>
+
 
     <!-- build:js js/lib.js -->
     <!-- bower:js -->
@@ -60,6 +98,9 @@
     <script src="/bower_components/angularfire/dist/angularfire.js"></script>
     <script src="/bower_components/angular-ui-grid/ui-grid.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="/bower_components/angular-messages/angular-messages.js"></script>
+    <script src="/bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <script src="/bower_components/angular-i18n/angular-locale_nl-nl.js"></script>
     <!-- endbuild -->
@@ -142,4 +183,5 @@
     <!-- endinject -->
     <!-- endbuild -->
 </body>
+
 </html>
