azure deploy errors

--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -2,4 +2,4 @@
     <i class="material-icons">home</i> Home
 </div>-->
 
- Home
+Welkom op mijn site FirePower. Deze site is in ontwikkeling voor diverse redenen.
