create onerepmaxes finished

--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -2,4 +2,7 @@
     <i class="material-icons">home</i> Home
 </div>-->
 
-Welkom op mijn site FirePower. Deze site is in ontwikkeling voor diverse redenen.
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium a numquam consequatur? Veritatis libero, officiis nulla eius maxime, numquam, quibusdam earum quis temporibus ratione velit dolore error. Magni, delectus, recusandae?</p>
+<p>Laboriosam reprehenderit quibusdam illo repellat, eligendi ab consequatur quis corrupti velit nostrum id, accusamus, aspernatur sint. Deserunt ipsa nostrum quaerat consequuntur nulla quos, magnam, non deleniti, delectus doloremque asperiores fugit.</p>
+<p>Iste asperiores magnam optio nesciunt, corporis laboriosam quaerat assumenda non placeat reiciendis explicabo et nam eligendi voluptates, doloremque excepturi porro? Ducimus reiciendis asperiores deleniti tempora iste, error omnis modi ex?</p>
+<p>A explicabo aut corrupti deleniti, laborum culpa cumque nam voluptatibus error laudantium ipsa est quas esse sint eveniet repellat eaque voluptates aliquam quis atque qui officiis natus, reiciendis! Fugiat, natus?</p>
