--- a/src/client/index.html
+++ b/src/client/index.html
@@ -134,6 +134,7 @@
     <script src="/src/client/app/core/app.domain.js"></script>
     <script src="/src/client/app/core/app.domain.oefeningen.js"></script>
     <script src="/src/client/app/core/app.domain.onerepMaxen.js"></script>
+    <script src="/src/client/app/core/app.domain.trainingen.js"></script>
     <script src="/src/client/app/core/app.domain.trainingsSchemas.js"></script>
     <script src="/src/client/app/core/businesslogic.js"></script>
     <script src="/src/client/app/core/config.js"></script>
