start user registration

--- a/src/client/app/workouts/workoutsgenereren.1.html
+++ b/src/client/app/workouts/workoutsgenereren.1.html
@@ -1,4 +1,6 @@
-<md-subheader class="md-primary ">
+
+
+<md-subheader ng-show="!vm.toonGebruikerInvullen" class="md-primary ">
     {{vm.stap1Title}}</md-subheader>
 
 <md-subheader class="md-primary " ng-show="vm.toon1Rm">
