Planning Workouts selection finished

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -123,6 +123,7 @@
     <script src="/src/client/app/login/login.module.js"></script>
     <script src="/src/client/app/stamgegevens/stamgegevens.module.js"></script>
     <script src="/src/client/app/trainen/trainen.module.js"></script>
+    <script src="/src/client/app/trainingen/trainingen.module.js"></script>
     <script src="/src/client/app/widgets/widgets.module.js"></script>
     <script src="/src/client/app/workouts/workouts.module.js"></script>
     <script src="/src/client/app/admin/admin.controller.js"></script>
@@ -179,6 +180,8 @@
     <script src="/src/client/app/stamgegevens/trainingsmethodes/trainingsmethodes.route.js"></script>
     <script src="/src/client/app/trainen/trainen.controller.js"></script>
     <script src="/src/client/app/trainen/trainen.route.js"></script>
+    <script src="/src/client/app/trainingen/trainingen.controller.js"></script>
+    <script src="/src/client/app/trainingen/trainingen.route.js"></script>
     <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
     <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
     <script src="/src/client/app/workouts/workouts.controller.js"></script>
