--- a/src/client/index.html
+++ b/src/client/index.html
@@ -121,6 +121,7 @@
     <script src="/src/client/app/home/home.module.js"></script>
     <script src="/src/client/app/layout/layout.module.js"></script>
     <script src="/src/client/app/login/login.module.js"></script>
+    <script src="/src/client/app/overzichten/overzichten.module.js"></script>
     <script src="/src/client/app/stamgegevens/stamgegevens.module.js"></script>
     <script src="/src/client/app/trainen/trainen.module.js"></script>
     <script src="/src/client/app/trainingen/trainingen.module.js"></script>
@@ -162,6 +163,8 @@
     <script src="/src/client/app/layout/sidebar.controller.js"></script>
     <script src="/src/client/app/login/login.controller.js"></script>
     <script src="/src/client/app/login/login.route.js"></script>
+    <script src="/src/client/app/overzichten/overzichten.controller.js"></script>
+    <script src="/src/client/app/overzichten/overzichten.route.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.controller.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.route.js"></script>
     <script src="/src/client/app/stamgegevens/metingsoorten/metingsoorten.controller.js"></script>
