before conversion trainingen

--- a/src/client/app/trainingen/trainingen.html
+++ b/src/client/app/trainingen/trainingen.html
@@ -28,7 +28,7 @@
                 </div>
                 <md-button class="md-fab md-primary" aria-label="set opslaan" ng-click="vm.setOpslaan(wo)">
                     <i class="fa fa-floppy-o"></i>
-                    <md-tooltip md-direction="left ">
+                    <md-tooltip md-direction="top ">
                         Opslaan
                     </md-tooltip>
                 </md-button>
@@ -45,4 +45,3 @@
         </md-card-content>
       
 </md-content>
-  <pre>{{vm.uitgevoerdeWorkout}}</pre>
