--- a/src/client/app/overzichten/overzichten.html
+++ b/src/client/app/overzichten/overzichten.html
@@ -1,3 +1,30 @@
 <md-content>
-    {{vm.title}}
+    <md-toolbar class="md-warn">
+        <div class="md-toolbar-tools">
+            <h2 class="md-flex">{{vm.title}}</h2>
+        </div>
+    </md-toolbar>
+
+    <md-list>
+        <md-subheader class="md-no-sticky">Klik om te wijzigen</md-subheader>
+        <div layout="row" layout-align="space-between center" flex="80">
+
+            <p>Datum</p>
+            <p>Oefening</p>
+            <p>Gewicht</p>
+            <p>Aantal</p>
+            <p>1RepMax</p>
+        </div>
+
+        <md-list-item ng-repeat="training in vm.trainingenPerGebruiker" ng-click="vm.setWijzigen(training)">
+            <p>{{ training.datum | date }}</p>
+            <p> {{ training.oefeningOmschrijving}}</p>
+            <p> {{ training.gewicht | number:1}} kg</p>
+            <p > {{ training.aantalReps }}</p>
+            <p>{{(training.gewicht*(training.aantalReps*0.033+1)) | number:0}}</p>
+        </md-list-item>
+    </md-list>
+
 </md-content>
+<!--<h1>Berekende 1 Rep Max : {{(vm.calculator[0].gewicht*(vm.calculator[0].aantal*0.033 +1)) | number:0 }} kg</h1>-->
+<pre>{{vm.TrainingenPerGebruiker}}</pre>
