finished overzichten menu bar

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -165,6 +165,8 @@
     <script src="/src/client/app/login/login.route.js"></script>
     <script src="/src/client/app/overzichten/overzichten.controller.js"></script>
     <script src="/src/client/app/overzichten/overzichten.route.js"></script>
+    <script src="/src/client/app/overzichten/records/records.route.js"></script>
+    <script src="/src/client/app/overzichten/trainingen/trainingen.route.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.controller.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.route.js"></script>
     <script src="/src/client/app/stamgegevens/metingsoorten/metingsoorten.controller.js"></script>
