--- a/src/client/app/overzichten/overzichten.html
+++ b/src/client/app/overzichten/overzichten.html
@@ -3,8 +3,26 @@
         <div class="md-toolbar-tools">
             <h2 class="md-flex">{{vm.title}}</h2>
         </div>
-    </md-toolbar>
+        <md-menu md-offset="0 -7">
+            <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
+                <i class="fa fa-bars"></i>
+            </md-button>
+            <md-menu-content width="4">
 
+                <md-menu-item>
+                    <md-button>
+                        <a ui-sref="trainingsschemas({id: m.$id})">Onderhoud schemas</a>
+                    </md-button>
+                </md-menu-item>
+                <md-menu-item>
+                    <md-button>
+                        <a ui-sref="trainingsoefeningen({id: m.$id})">Onderhoud oefeningen</a>
+                    </md-button>
+                </md-menu-item>
+            </md-menu-content>
+        </md-menu>
+    </md-toolbar>
+    <!--<pre>{{vm.trainingenPerGebruiker |json}}</pre>-->
     <md-list>
         <md-subheader class="md-no-sticky">Klik om te wijzigen</md-subheader>
         <div layout="row" layout-align="space-between center" flex="80">
@@ -16,15 +34,16 @@
             <p>1RepMax</p>
         </div>
 
-        <md-list-item ng-repeat="training in vm.trainingenPerGebruiker" ng-click="vm.setWijzigen(training)">
+        <md-list-item ng-repeat="training in vm.trainingenPerGebruikerGeselecteerd" ng-click="vm.setWijzigen(training)">
             <p>{{ training.datum | date }}</p>
             <p> {{ training.oefeningOmschrijving}}</p>
             <p> {{ training.gewicht | number:1}} kg</p>
-            <p > {{ training.aantalReps }}</p>
+            <p> {{ training.aantalReps }}</p>
             <p>{{(training.gewicht*(training.aantalReps*0.033+1)) | number:0}}</p>
+            <!--<p>{{training.oefeningOrm}}</p>-->
         </md-list-item>
     </md-list>
 
 </md-content>
 <!--<h1>Berekende 1 Rep Max : {{(vm.calculator[0].gewicht*(vm.calculator[0].aantal*0.033 +1)) | number:0 }} kg</h1>-->
-<pre>{{vm.TrainingenPerGebruiker}}</pre>
+<!--<pre>{{vm.trainingenPerGebruikerGeselecteerd | json}}</pre>-->
