--- a/src/client/app/overzichten/overzicht.html
+++ b/src/client/app/overzichten/overzicht.html
@@ -25,18 +25,25 @@
                     <md-menu-item>
                         <md-button ng-click="vm.openTrainingen()">
                             Trainingen
-                           
+
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
                         <md-button ng-click="vm.openRecords()">
-                           Records
-                            
+                            Trainingen Tabel
+
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-click="vm.openTrainingenMob()">
+                            Trainingen Mobiel
+
                         </md-button>
                     </md-menu-item>
                 </md-menu-content>
 
         </div>
     </md-toolbar>
+   
     <div ui-view></div>
 </md-content>
