--- a/src/client/index.html
+++ b/src/client/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="/bower_components/angular-ui-grid/ui-grid.css" />
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="/bower_components/angular-material-data-table/dist/md-data-table.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbuild -->
@@ -103,6 +104,7 @@
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-messages/angular-messages.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
+    <script src="/bower_components/angular-material-data-table/dist/md-data-table.js"></script>
     <!-- endbower -->
     <script src="/bower_components/angular-i18n/angular-locale_nl-nl.js"></script>
     <!-- endbuild -->
@@ -167,6 +169,7 @@
     <script src="/src/client/app/overzichten/overzichten.route.js"></script>
     <script src="/src/client/app/overzichten/records/records.route.js"></script>
     <script src="/src/client/app/overzichten/trainingen/trainingen.route.js"></script>
+    <script src="/src/client/app/overzichten/trainingenmob/trainingenmob.route.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.controller.js"></script>
     <script src="/src/client/app/stamgegevens/halterschijven/halterschijven.route.js"></script>
     <script src="/src/client/app/stamgegevens/metingsoorten/metingsoorten.controller.js"></script>
