--- a/src/client/app/overzichten/records/records.html
+++ b/src/client/app/overzichten/records/records.html
@@ -1,1 +1,46 @@
-<h1>Records</h1>
+ <h3>{{ vm.selected | uppercase }}</h3>
+
+
+
+    <md-radio-group ng-model="vm.selected" ng-click="vm.raportKeuze(vm.selected)">
+        <md-radio-button value="records"> Records </md-radio-button>
+        <md-radio-button value="trainingen" class="md-primary">Trainingen</md-radio-button>
+    </md-radio-group>
+    <div ng-show="vm.toonTrainingen">
+        <md-checkbox md-no-ink aria-label="Checkbox No Ink" ng-model="vm.cbAmrap" class="md-primary" ng-click="vm.amrapToggle(vm.cbAmrap)">
+            <span>Toon alleen de Amrap sets.</span>
+        </md-checkbox>
+        <md-checkbox md-no-ink aria-label="Checkbox No Ink" ng-model="vm.cbTop" class="md-primary" ng-click="vm.topSetToggle(vm.cbTop)">
+            <span>Toon alleen de 95% sets.</span>
+        </md-checkbox>
+    </div>
+<md-table-container>
+    <table md-table>
+        <thead md-head md-order="myOrder">
+            <tr md-row>
+                <th md-column md-order-by="datum"><span>Datum</span></th>
+                <th md-column md-order-by="oefeningOmschrijving"><span>Omschrijving</span></th>
+                <th md-column md-numeric md-order-by="gewicht"><span>Gewicht (kg)</span></th>
+                <th md-column md-numeric>Aantal reps</th>
+                <th md-column md-numeric>1 Rep Max</th>
+            </tr>
+        </thead>
+        <tbody md-body>
+            <tr ng-show="vm.toonTrainingen" md-row ng-repeat="training in vm.trainingenPerGebruikerGeselecteerd | orderBy: myOrder | filter: vm.myFilter"
+            ng-click="vm.setWijzigen(training)">
+                <td md-cell>{{training.datum | date}}</td>
+                <td md-cell>{{training.oefeningOmschrijving}}</td>
+                <td md-cell>{{training.gewicht | number: 1}}</td>
+                <td md-cell>{{training.aantalReps}}</td>
+                <td md-cell>{{(training.gewicht*(training.aantalReps*0.033+1)) | number:0}}</td>
+            </tr>
+            <tr ng-show="!vm.toonTrainingen" md-row ng-repeat="training in vm.recordsPerGebruiker | orderBy: myOrder " ng-click="vm.setWijzigen(training)">
+                <td md-cell>{{training.datum | date}}</td>
+                <td md-cell>{{training.oefeningOmschrijving}}</td>
+                <td md-cell>{{training.gewicht | number: 1}}</td>
+                <td md-cell>{{training.aantalReps}}</td>
+                <td md-cell>{{(training.gewicht*(training.aantalReps*0.033+1)) | number:0}}</td>
+            </tr>
+        </tbody>
+    </table>
+</md-table-container>
